Json/csv 선택 기능 구현